--- a/Mr_Barber/frontend/index.html
+++ b/Mr_Barber/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr Barber</title>
   </head>
-  <body class="bg-gray-800">
+  <body class="bg-white">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
